--- a/requirements.txt
+++ b/requirements.txt
@@ -8,11 +8,14 @@ defusedxml==0.6.0
 Django==3.1.2
 django-allauth==0.42.0
 django-crispy-forms==1.7.2
+django-embed-video==1.3.3
 gunicorn==20.0.4
 idna==2.10
 mypy-extensions==0.4.3
 oauthlib==3.1.0
 pathspec==0.8.0
+Pillow==8.0.0
+pipe==1.6.0
 python3-openid==3.2.0
 pytz==2020.1
 regex==2020.9.27
