--- a/requirements.txt
+++ b/requirements.txt
@@ -1,373 +1,30 @@
-AdvancedHTTPServer==2.2.0
-aiodns==2.0.0
-aiohttp==3.6.2
-aioredis==1.3.1
-ajpy==0.0.4
-alembic==1.0.11.dev0
-aniso8601==8.0.0
 appdirs==1.4.4
-APScheduler==0.0.0
-argon2-cffi==20.1.0
-asgiref==3.3.1
-asn1crypto==0.24.0
-async-generator==1.10
-async-timeout==3.0.1
-asyncio==3.4.3
-attrs==18.2.0
-autobahn==17.10.1
-Automat==0.6.0
-autopep8==1.5.4
-Babel==2.6.0
-basemap==1.2.1
-bcrypt==3.1.7
-beautifulsoup4==4.8.2
-binwalk==2.2.0
+asgiref==3.2.10
 black==20.8b1
-bleach==3.2.1
-blinker==1.4
-boltons==19.1.0
-bottle==0.12.15
-Brotli==1.0.7
-bs4==0.0.1
-cbor==1.0.0
-certifi==2019.11.28
-cffi==1.14.3
-Chameleon==3.6.2
+certifi==2020.6.20
 chardet==3.0.4
-chrome-gnome-shell==0.0.0
 click==7.1.2
-click-plugins==1.1.1
-colorama==0.4.3
-constantly==15.1.0
-cryptography==2.6.1
-cupshelpers==1.0
-cycler==0.10.0
-Cython==0.29.14
-dbus-python==1.2.16
-debtags==2.1
-decorator==4.3.0
-decore==0.0.1
 defusedxml==0.6.0
-deprecation==2.0.7
-dicttoxml==1.7.4
-distlib==0.3.1
-distro==1.3.0
-distro-info==0.24
-dj-database-url==0.5.0
-Django==2.1
-django-biometrics==1.0
-django-debug-toolbar==1.9.1
+Django==3.1.2
+django-allauth==0.42.0
+django-crispy-forms==1.7.2
 django-embed-video==1.3.3
-dnslib==0.9.12
-dnspython==1.16.0
-EasyProcess==0.3
-ecdsa==0.14.1
-email-validator==1.0.3
-entrypoint2==0.2.3
-entrypoints==0.3
-et-xmlfile==1.0.1
-evdev==1.3.0
-faraday-plugins==1.0rc1
-faradaysec==3.10.0
-feedparser==5.2.1
-filedepot==0.5.2
-filelock==3.0.12
-filteralchemy==0.1.0
-Flask==1.1.1
-Flask-BabelEx==0.9.3
-Flask-Classful==0.14.1
-Flask-KVSession==0.6.2
-Flask-Login==0.4.1
-Flask-Mail==0.9.1
-Flask-Principal==0.4.0
-Flask-Restless==0.17.0
-Flask-Security==3.0.0
-Flask-Session==0.3.1
-Flask-SQLAlchemy==2.4.0
-Flask-WTF==0.14.2
-future==0.16.0
-geoip2==2.9.0
-geojson==2.5.0
-gevent==1.4.0
-gitdb2==2.0.6
-GitPython==3.0.5
-gpg===1.14.0-unknown
-graphene==2.1.7
-graphene-sqlalchemy==2.1.2
-graphql-core==2.2.1
-graphql-relay==2.0.0
-greenlet==0.4.15
-grequests==0.4.0
-gTTS==2.1.1
-gTTS-token==1.1.3
+django-suit==0.2.25
 gunicorn==20.0.4
-h11==0.8.1
-h2==3.0.1
-h5py==3.1.0
-hashID==3.1.4
-hiredis==1.0.0
-hpack==3.0.0
-html2text==2019.8.11
-html5lib==1.0.1
-hupper==1.9.1
-hyperframe==5.2.0
-hyperlink==19.0.0
-icalendar==4.0.3
-idna==2.6
-impacket==0.9.20
-incremental==16.10.1
-IPy==1.0
-ipykernel==5.4.2
-ipython==5.8.0
-ipython-genutils==0.2.0
-itsdangerous==0.24
-jdcal==1.0
-jeepney==0.5.0
-Jinja2==2.10.1
-joblib==1.0.0
-jsonschema==2.6.0
-jupyter-client==6.1.7
-jupyter-core==4.6.1
-jupyterlab-pygments==0.1.2
-kaitaistruct==0.8
-kazam==1.4.5
-Keras==2.4.3
-KismetCaptureFreaklabsZigbee==2018.7.0
-KismetCaptureRtl433==2019.9.1
-KismetCaptureRtladsb==2019.10.1
-KismetCaptureRtlamr==2019.10.1
-kiwisolver==1.0.1
-ldap3==2.5.1
-ldapdomaindump==0.9.1
-lxml==4.6.1
-lz4==3.0.2+dfsg
-Mako==1.0.7
-Markdown==3.1.1
-MarkupSafe==1.1.0
-marshmallow==3.0.0b3
-marshmallow-sqlalchemy==0.19.0
-matplotlib==3.1.2
-maxminddb==1.4.1
-mechanize==0.4.5
-mimerender==0.6.0
-mistune==0.8.4
-mitmproxy==4.0.4
-MouseInfo==0.1.3
-mpmath==1.1.0
-msgpack==0.5.6
-mss==6.1.0
-multidict==4.7.3
-multitasking==0.0.9
+idna==2.10
 mypy-extensions==0.4.3
-mysqlclient==1.4.4
-nassl==3.0.0
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.0.3
-nest-asyncio==1.4.3
-netaddr==0.7.19
-notebook==6.1.5
-nplusone==1.0.0
-numexpr==2.7.1
-numpy==1.19.3
-olefile==0.46
-openpyxl==2.4.9
-packaging==19.1
-pandas==1.0.5
-pandocfilters==1.4.3
-paramiko==2.6.0
-passlib==1.7.1
-Paste==3.2.3
-PasteDeploy==2.0.1
-PasteScript==2.0.2
-patator==0.7
-pathspec==0.8.1
-patsy==0.5.1
-pdpipe==0.0.53
-pefile==2019.4.18
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==6.2.1
-pipdeptree==0.13.2
-pipenv==2020.8.13
-plaster==1.0
-plaster-pastedeploy==0.5
-playsound==1.2.2
-plotly==4.4.1
-pluginbase==1.0.0
-ply==3.11
-prettytable==0.7.2
-prometheus-client==0.9.0
-promise==2.2
-prompt-toolkit==1.0.15
-protobuf==3.6.1
-psycopg2==2.8.4
-ptyprocess==0.6.0
-py-ubjson==0.14.0
-pyaes==1.6.1
-pyasn1==0.4.2
-pyasn1-modules==0.2.1
-PyAudio==0.2.11
-PyAutoGUI==0.9.52
-pycairo==1.16.2
-pycares==3.1.1
-pycodestyle==2.6.0
-pycparser==2.20
-pycrypto==2.6.1
-pycryptodomex==3.6.1
-pycups==1.9.73
-pycurl==7.43.0.2
-pydot==1.4.1
-pyExploitDb==0.2.0
-pyfiglet==0.8.post0
-PyGetWindow==0.0.9
-Pygments==2.7.3
-PyGObject==3.34.0
-pyinotify==0.9.6
-PyMsgBox==1.0.9
-pymssql==2.1.4
-PyNaCl==1.3.0
-pynput==1.7.1
-pyOpenSSL==19.0.0
-pyotp==2.3.0
-pyparsing==2.4.2
-pypcapfile==0.12.1
-pyperclip==1.7.0
-pypng==0.0.20
-pyproj==2.4.2
-PyQRCode==1.2.1
-PyQt5==5.15.1
-PyQt5-sip==12.8.1
-pyqtgraph==0.11.0rc0
-pyramid==1.10.4
-PyRect==0.1.4
-pyscreenshot==2.2
-PyScreeze==0.1.26
-pyserial==3.4
-pyShodan==0.2.3
-pyshp==2.1.0
-pysmbc==1.0.15.6
-pysmi==0.3.2
-pysnmp==4.4.6
-PySocks==1.6.8
-python-apt==2.1.5
-python-dateutil==2.7.3
-python-debian==0.1.36
-python-decouple==3.3
-python-editor==1.0.3
-python-magic==0.4.16
-python-mimeparse==1.6.0
-python-pam==1.8.4
-python-snappy==0.5.3
-python-xlib==0.28
-python3-xlib==0.15
-PyTrie==0.2
-pyttsx3==2.90
-PyTweening==1.0.3
-pytz==2019.3
-pyxdg==0.26
-PyYAML==5.3
-pyzmq==20.0.0
-qrcode==6.1
-Quamash==0.6.1
-redis==3.3.11
-regex==2020.10.28
-repoze.lru==0.7
+oauthlib==3.1.0
+pathspec==0.8.0
+Pillow==8.0.0
+pipe==1.6.0
+python3-openid==3.2.0
+pytz==2020.1
+regex==2020.9.27
 requests==2.24.0
-requests-file==1.4.3
-retrying==1.3.3
-rsa==4.6
-ruamel.yaml==0.15.89
-rule-engine==1.1.0
-Rx==1.6.1
-scapy==2.4.3
-scikit-learn==0.23.2
-scipy==1.3.3
-seaborn==0.11.0
-selenium==4.0.0a1
-Send2Trash==1.5.0
-service-identity==18.1.0
-shodan==1.21.2
-simplegeneric==0.8.1
-simplejson==3.16.0
-simplekv==0.13.0
-sip==4.19.20
-six==1.13.0
-skutil==0.0.16
-smmap2==2.0.5
-smoke-zephyr==1.4.1
-sortedcontainers==2.1.0
-sounddevice==0.4.1
-soupsieve==1.9.5
-speaklater==1.3
-SpeechRecognition==3.8.1
-SQLAlchemy==1.3.12
-sqlalchemy-schemadisplay==1.3
-sqlparse==0.2.4
-sslyze==2.1.4
-statsmodels==0.12.1
-strct==0.0.32
-sympy==1.7.1
-syslog-rfc5424-formatter==1.2.2
-tables==3.6.1
-tabulate==0.8.7
-telebot==0.0.3
-Telethon==1.16.4
-Tempita==0.5.2
-termcolor==1.1.0
-terminado==0.9.1
-testpath==0.4.4
-texttable==1.6.2
-theHarvester==3.1.0
-threadpoolctl==2.1.0
-tld==0.9.1
-tls-parser==1.2.1
-toml==0.10.2
-torbrowser-launcher==0.3.3
-tornado==5.1.1
-tqdm==4.30.0
-traitlets==4.3.3
-translationstring==1.3
-Twisted==18.9.0
-txaio==2.10.0
+requests-oauthlib==1.3.0
+sqlparse==0.3.1
+toml==0.10.1
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
-tzlocal==2.0.0b2
-u-msgpack-python==2.1
-unattended-upgrades==0.1
-unicodecsv==0.14.1
-Unidecode==1.1.1
-Unipath==1.1
-urllib3==1.25.6
-urwid==2.0.1
-venusian==1.2.0
-virtualenv==20.0.31
-virtualenv-clone==0.5.4
-wafw00f==2.0.0
-waitress==1.4.1
-wapiti3==3.0.2
-wcwidth==0.1.8
-webargs==5.1.2
-webencodings==0.5.1
-WebOb==1.8.5
-websocket-client==0.53.0
-WebTest==2.0.32
-Werkzeug==0.16.0
-wfuzz==2.4
+urllib3==1.25.10
 whitenoise==5.2.0
-wifite==2.5.0
-wsaccel==0.6.2
-wsproto==0.11.0
-WTForms==2.2.1
-xlrd==1.1.0
-XlsxWriter==1.1.2
-xlwt==1.3.0
-yara-python==3.10.0
-yarl==1.4.2
-yaswfp==0.9.3
-yfinance==0.1.55
-zope.component==4.3.0
-zope.deprecation==4.4.0
-zope.event==4.4
-zope.hookable==5.0.0
-zope.interface==4.6.0
